<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".UserDetails">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_details"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/size_70dp"/>

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:layout_marginHorizontal="@dimen/size_20dp"
        android:background="@drawable/rounded_white"
        android:layout_marginTop="@dimen/size_30dp"
        android:padding="@dimen/size_10dp"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/edt_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_name"
        android:layout_marginHorizontal="@dimen/size_20dp"
        android:background="@drawable/rounded_white"
        android:layout_marginTop="@dimen/size_20dp"
        android:padding="@dimen/size_10dp"
        android:hint="@string/surname"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_surname"
        android:layout_marginHorizontal="@dimen/size_20dp"
        android:background="@drawable/rounded_white"
        android:layout_marginTop="@dimen/size_20dp"
        android:padding="@dimen/size_10dp"
        android:hint="@string/username"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/size_80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:backgroundTint="@color/main"
        app:cornerRadius="@dimen/size_12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>